--- a/game.css
+++ b/game.css
@@ -1,6 +1,6 @@
 
 html {
-    font-family: cursive;
+    font-family: Georgia, serif;
     text-align: center;
 }
 
@@ -8,6 +8,7 @@ html, body {
     height: 100%;
     padding: 0;
     margin: 0;
+    color: black;
 }
 
 header, main, footer, aside {
@@ -47,7 +48,7 @@ output {
     margin: auto;
     height: 50%;
     padding: 5%;
-    border: 3px groove gray;
+    border: 3px groove red;
     border-radius: 1em;
 }
 
